fix(select): vertical align

--- a/styles/Select.scss
+++ b/styles/Select.scss
@@ -13,14 +13,17 @@
   @include m(small-size) {
     line-height: 28px;
     height: 28px;
+    font-size: 14px;
   }
   @include m(medium-size) {
     line-height: 34px;
     height: 34px;
+    font-size: 14px;
   }
   @include m(large-size) {
     line-height: 40px;
     height: 40px;
+    font-size: 16px;
   }
 }
 
